# online_littlelemon_restaurant

./: .env.example  .gitignore  Dockerfile  Pipfile  README.md  README_old.md  build.sh  docker-compose.yml  makefile  pyproject.toml  render.yaml  requests_examples.md  requirements.txt  setup.cfg
.github/workflows/: code-checker.yaml
LittleLemonAPI/: models.py  permissions.py  requests_examples.md  serializers.py  tests.py  urls.py  views.py
LittleLemonAPI/migrations/: 0001_initial.py  0002_menuitem_is_item_of_the_day_order_assigned_to_and_more.py  0003_alter_order_assigned_to_alter_order_delivery_crew.py  0004_remove_order_delivery_crew.py  0005_order_is_delivered.py  0006_menuitem_description.py
littlelemon/: settings.py  urls.py
littlelemon/components/: core.py  database.py  djoser.py  internationalization.py  network.py  rest_framework.py  security.py  templates.py
restaurant/: admin.py  forms.py  models.py  urls.py  views.py
restaurant/migrations/: 0001_initial.py  0002_menu_description.py
restaurant/static/css/: book.css  consent_message.css  login.css  registration.css  reservation.css  style.css
restaurant/static/js/: basket.js  gtm_body.js  gtm_head.js  is_consent_given.js  is_logged.js  login.js  registration.js  reservation.js
restaurant/templates/: base.html  basket.html  book.html  confirmation.html  login.html  menu.html  menu_item.html  privacy_policy.html  registration.html  reservation.html
restaurant/templates/partials/: _consent_message.html  _footer.html  _header.html
scripts/: run_gunicorn.sh
